--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -266,7 +266,7 @@ config CPU_FREQ_GOV_LULZACTIVE
       To compile this driver as a module, choose M here: the
       module will be called cpufreq_lulzactive.
 
-      If in doubt, say N.
+      If in doubt, say Y.
 
 config CPU_FREQ_GOV_LULZACTIVEQ
     tristate "'lulzactiveq' cpufreq governor"
@@ -291,7 +291,7 @@ config CPU_FREQ_GOV_PEGASUSQ
 	  To compile this driver as a module, choose M here: the
 	  module will be called cpufreq_pegasusq.
 
-	  If in doubt, say N.
+	  If in doubt, say Y.
         
 config CPU_FREQ_GOV_HOTPLUG
 	tristate "'hotplug' cpufreq governor"
