Test config options

--- a/arch/arm/configs/dhollmen_P51XXHOT_defconfig
+++ b/arch/arm/configs/dhollmen_P51XXHOT_defconfig
@@ -96,7 +96,7 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
-CONFIG_RELAY=y
+# CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
@@ -109,8 +109,8 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
-CONFIG_UID16=y
-CONFIG_SYSCTL_SYSCALL=y
+# CONFIG_UID16 is not set
+# CONFIG_SYSCTL_SYSCALL is not set
 # CONFIG_KALLSYMS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
@@ -181,10 +181,10 @@ CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_IOSCHED_VR is not set
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_ROW=y
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_SIO is not set
-CONFIG_DEFAULT_IOSCHED="row"
+CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -580,7 +580,7 @@ CONFIG_SUSPEND_FREEZER=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_WAKELOCK=y
-CONFIG_WAKELOCK_STAT=y
+# CONFIG_WAKELOCK_STAT is not set
 CONFIG_USER_WAKELOCK=y
 CONFIG_EARLYSUSPEND=y
 # CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
