Configuration changes to unify versions

--- a/arch/arm/configs/dhollmen_P51XX_defconfig
+++ b/arch/arm/configs/dhollmen_P51XX_defconfig
@@ -334,9 +334,7 @@ CONFIG_OMAP4_ARM_ERRATA_751472=y
 CONFIG_OMAP4_ARM_ERRATA_743622=y
 CONFIG_OMAP4_HSOTG_ED_CORRECTION=y
 CONFIG_OMAP4430_TOP_CPU=y
-# CONFIG_OMAP4430_CPU_OVERCLOCK is not set
 CONFIG_OMAP4430_TOP_GPU=y
-# CONFIG_OMAP4430_GPU_OVERCLOCK is not set
 CONFIG_MACH_OMAP_SAMSUNG=y
 CONFIG_MACH_OMAP4_SAMSUNG=y
 # CONFIG_MACH_SAMSUNG_T1 is not set
@@ -534,10 +532,10 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
@@ -2399,9 +2397,7 @@ CONFIG_GENERIC_ACL=y
 #
 # CD-ROM/DVD Filesystems
 #
-CONFIG_ISO9660_FS=m
-CONFIG_JOLIET=y
-CONFIG_ZISOFS=y
+# CONFIG_ISO9660_FS is not set
 # CONFIG_UDF_FS is not set
 
 #
