Change config to unified

--- a/arch/arm/configs/dhollmen_P31XX_defconfig
+++ b/arch/arm/configs/dhollmen_P31XX_defconfig
@@ -36,7 +36,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-dhollmen-P3"
+CONFIG_LOCALVERSION="-dhollmen-P5"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -96,7 +96,7 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
-# CONFIG_RELAY is not set
+CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
@@ -134,11 +134,12 @@ CONFIG_PERF_USE_VMALLOC=y
 #
 # CONFIG_PERF_EVENTS is not set
 # CONFIG_PERF_COUNTERS is not set
-CONFIG_VM_EVENT_COUNTERS=y
+# CONFIG_VM_EVENT_COUNTERS is not set
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
-# CONFIG_SLUB is not set
-CONFIG_SLOB=y
+CONFIG_SLUB=y
+# CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 # CONFIG_DEFERRED_INITCALLS is not set
 CONFIG_HAVE_OPROFILE=y
@@ -160,7 +161,7 @@ CONFIG_BASE_SMALL=0
 CONFIG_MODULES=y
 CONFIG_MODULE_FORCE_LOAD=y
 CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
+# CONFIG_MODULE_FORCE_UNLOAD is not set
 CONFIG_MODVERSIONS=y
 # CONFIG_MODULE_SRCVERSION_ALL is not set
 CONFIG_STOP_MACHINE=y
@@ -304,7 +305,6 @@ CONFIG_OMAP_32K_TIMER_HZ=128
 CONFIG_OMAP_DM_TIMER=y
 CONFIG_OMAP_TEMP_SENSOR=y
 CONFIG_OMAP_REMOTEPROC_MEMPOOL_SIZE=0x0
-CONFIG_OMAP_REMOTEPROC_MEMPOOL_SIZE_DSP=0x400000
 # CONFIG_OMAP_PM_NONE is not set
 # CONFIG_OMAP_PM_NOOP is not set
 CONFIG_OMAP_PM=y
@@ -357,7 +357,7 @@ CONFIG_BT_MGMT=y
 # OMAP Samsung Specific Configurations
 #
 CONFIG_SAMSUNG_MODEL_NAME="GT-P31XX"
-CONFIG_SAMSUNG_BOARD_NAME="Espresso Samsung"
+CONFIG_SAMSUNG_BOARD_NAME="Espresso 7.0 Samsung"
 CONFIG_SAMSUNG_CONSOLE_UART=4
 # CONFIG_SAMSUNG_KERNEL_DEBUG is not set
 # CONFIG_SAMSUNG_USE_GETLOG is not set
@@ -532,10 +532,10 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_HOTPLUG is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
@@ -1228,7 +1228,7 @@ CONFIG_BCMDHD_FW_PATH=""
 CONFIG_BCMDHD_NVRAM_PATH=""
 CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 CONFIG_WLAN_REGION_CODE=100
-# CONFIG_BROADCOM_WIFI is not set
+CONFIG_BROADCOM_WIFI=y
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
@@ -2318,7 +2318,7 @@ CONFIG_REMOTE_PROC=y
 CONFIG_REMOTE_PROC_AUTOSUSPEND=y
 CONFIG_OMAP_REMOTE_PROC=y
 CONFIG_OMAP_REMOTE_PROC_IPU=y
-CONFIG_OMAP_REMOTE_PROC_DSP=y
+# CONFIG_OMAP_REMOTE_PROC_DSP is not set
 CONFIG_OMAP_RPRES=y
 CONFIG_REMOTEPROC_WATCHDOG=y
 # CONFIG_REMOTEPROC_CORE_DUMP is not set
@@ -2391,9 +2391,7 @@ CONFIG_GENERIC_ACL=y
 #
 # CD-ROM/DVD Filesystems
 #
-CONFIG_ISO9660_FS=m
-CONFIG_JOLIET=y
-CONFIG_ZISOFS=y
+# CONFIG_ISO9660_FS is not set
 # CONFIG_UDF_FS is not set
 
 #
@@ -2539,7 +2537,7 @@ CONFIG_NLS_UTF8=y
 # Kernel hacking
 #
 CONFIG_PRINTK_TIME=y
-CONFIG_PRINTK_CPU_ID=y
+# CONFIG_PRINTK_CPU_ID is not set
 CONFIG_PRINTK_PID=y
 CONFIG_DEFAULT_MESSAGE_LOGLEVEL=4
 # CONFIG_ENABLE_WARN_DEPRECATED is not set
@@ -2553,6 +2551,7 @@ CONFIG_DEBUG_FS=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 # CONFIG_DEBUG_KERNEL is not set
 # CONFIG_HARDLOCKUP_DETECTOR is not set
+# CONFIG_SLUB_STATS is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_STACKTRACE is not set
 CONFIG_DEBUG_BUGVERBOSE=y
@@ -2561,7 +2560,7 @@ CONFIG_FRAME_POINTER=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 # CONFIG_RCU_CPU_STALL_VERBOSE is not set
 # CONFIG_LKDTM is not set
-CONFIG_SYSCTL_SYSCALL_CHECK=y
+# CONFIG_SYSCTL_SYSCALL_CHECK is not set
 CONFIG_HAVE_FUNCTION_TRACER=y
 CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
 CONFIG_HAVE_DYNAMIC_FTRACE=y
@@ -2584,11 +2583,15 @@ CONFIG_HAVE_ARCH_KGDB=y
 # Security options
 #
 CONFIG_KEYS=y
-# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
+CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 # CONFIG_SECURITY is not set
 # CONFIG_SECURITYFS is not set
-# CONFIG_SECURITY_MIDDLEWARE_COMPONENT is not set
+CONFIG_TF_ZEBRA=y
+CONFIG_SECURITY_MIDDLEWARE_COMPONENT=y
+# CONFIG_SMC_KERNEL_CRYPTO is not set
+CONFIG_SECURE_TRACE=y
+# CONFIG_TF_DRIVER_DEBUG_SUPPORT is not set
 # CONFIG_TF_CRYPTO_RNG is not set
 CONFIG_DEFAULT_SECURITY_DAC=y
 CONFIG_DEFAULT_SECURITY=""
