Force disable dsscomp debug

--- a/drivers/video/omap2/dsscomp/Kconfig
+++ b/drivers/video/omap2/dsscomp/Kconfig
@@ -1,17 +1,17 @@
 menuconfig DSSCOMP
-        tristate "OMAP DSS Composition support (EXPERIMENTAL)"
-        depends on OMAP2_DSS
+    tristate "OMAP DSS Composition support (EXPERIMENTAL)"
+    depends on OMAP2_DSS
 	default y
 
-        help
-          Frame composition driver using OMAP DSS2.  Allows using all
+    help
+      Frame composition driver using OMAP DSS2.  Allows using all
 	  DSS2 resources in a unified configuration.  Should not be used
 	  together with other DSS2 devices, such as V4L2 or framebuffer.
 
 config DSSCOMP_DEBUG_LOG
 	bool "Log event timestamps in debugfs"
-	default y
-	depends on DEBUG_FS
+	default n
+	depends on DEBUG_FS && NODEBUG 
 
 	help
 	  Takes timestamp for each callback and state transition, and
