Introducing some optimizations

--- a/arch/arm/configs/dhollmen_P31XX_defconfig
+++ b/arch/arm/configs/dhollmen_P31XX_defconfig
@@ -1831,7 +1831,7 @@ CONFIG_UHID=y
 #
 CONFIG_USB_HID=y
 # CONFIG_HID_PID is not set
-# CONFIG_USB_HIDDEV is not set
+CONFIG_USB_HIDDEV=y
 
 #
 # Special HID drivers
@@ -1842,7 +1842,7 @@ CONFIG_HID_APPLE=y
 CONFIG_HID_BELKIN=y
 CONFIG_HID_CHERRY=y
 CONFIG_HID_CHICONY=y
-# CONFIG_HID_PRODIKEYS is not set
+CONFIG_HID_PRODIKEYS=y
 CONFIG_HID_CYPRESS=y
 CONFIG_HID_DRAGONRISE=y
 # CONFIG_DRAGONRISE_FF is not set
