--- a/arch/arm/configs/dhollmen_P51XX_defconfig
+++ b/arch/arm/configs/dhollmen_P51XX_defconfig
@@ -1665,7 +1665,6 @@ CONFIG_TILER_EXPOSE_SSPTR=y
 #
 # Graphics support
 #
-# CONFIG_DRM is not set
 # CONFIG_PVR_SGX is not set
 CONFIG_ION=y
 CONFIG_ION_OMAP=y
@@ -1839,7 +1838,7 @@ CONFIG_UHID=y
 #
 CONFIG_USB_HID=y
 # CONFIG_HID_PID is not set
-# CONFIG_USB_HIDDEV is not set
+CONFIG_USB_HIDDEV=y
 
 #
 # Special HID drivers
@@ -1850,7 +1849,7 @@ CONFIG_HID_APPLE=y
 CONFIG_HID_BELKIN=y
 CONFIG_HID_CHERRY=y
 CONFIG_HID_CHICONY=y
-# CONFIG_HID_PRODIKEYS is not set
+CONFIG_HID_PRODIKEYS=y
 CONFIG_HID_CYPRESS=y
 CONFIG_HID_DRAGONRISE=y
 # CONFIG_DRAGONRISE_FF is not set
