--- a/fs/Kconfig
+++ b/fs/Kconfig
@@ -57,6 +57,7 @@ source "fs/notify/Kconfig"
 source "fs/quota/Kconfig"
 source "fs/autofs4/Kconfig"
 source "fs/fuse/Kconfig"
+source "fs/aufs/Kconfig"
 
 config CUSE
 	tristate "Character device in userspace support"
