--- a/arch/arm/configs/dhollmen_P51XX_defconfig
+++ b/arch/arm/configs/dhollmen_P51XX_defconfig
@@ -2625,8 +2625,8 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
-# CONFIG_SECURITY_SELINUX_DISABLE is not set
-# CONFIG_SECURITY_SELINUX_DEVELOP is not set
+CONFIG_SECURITY_SELINUX_DISABLE=y
+CONFIG_SECURITY_SELINUX_DEVELOP=y
 # CONFIG_SECURITY_SELINUX_AVC_STATS is not set
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
@@ -2635,7 +2635,7 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_IMA is not set
 CONFIG_TF_ZEBRA=y
 CONFIG_SECURITY_MIDDLEWARE_COMPONENT=y
-# CONFIG_SMC_KERNEL_CRYPTO is not set
+CONFIG_SMC_KERNEL_CRYPTO=y
 # CONFIG_SECURE_TRACE is not set
 # CONFIG_TF_DRIVER_DEBUG_SUPPORT is not set
 # CONFIG_TF_CRYPTO_RNG is not set
