--- a/arch/arm/configs/dhollmen_P51XX_defconfig
+++ b/arch/arm/configs/dhollmen_P51XX_defconfig
@@ -1703,7 +1703,8 @@ CONFIG_FB_MODE_HELPERS=y
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
 CONFIG_HDMI_TI_4XXX_IP=y
-# CONFIG_SII9234 is not set
+CONFIG_SII9234=y
+CONFIG_SII9234_RCP=y
 # CONFIG_SII9290_SUPPORT is not set
 CONFIG_FB_OMAP_BOOTLOADER_INIT=y
 CONFIG_OMAP2_VRAM=y
