--- a/arch/arm/configs/dhollmen_P31XX_defconfig
+++ b/arch/arm/configs/dhollmen_P31XX_defconfig
@@ -1667,7 +1667,6 @@ CONFIG_TILER_EXPOSE_SSPTR=y
 #
 # Graphics support
 #
-# CONFIG_DRM is not set
 # CONFIG_PVR_SGX is not set
 CONFIG_ION=y
 CONFIG_ION_OMAP=y
@@ -2423,6 +2422,12 @@ CONFIG_VFAT_FS=y
 CONFIG_FAT_DEFAULT_CODEPAGE=437
 CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 # CONFIG_NTFS_RW is not set
