--- a/arch/arm/configs/dhollmen_P5100_defconfig
+++ b/arch/arm/configs/dhollmen_P5100_defconfig
@@ -453,13 +453,13 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
+# CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_LULZACTIVEQ is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_HOTPLUG=y
+# CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1569,6 +1569,27 @@ CONFIG_TILER_EXPOSE_SSPTR=y
 #
 CONFIG_ION=y
 CONFIG_ION_OMAP=y
+CONFIG_PVR_SGX=y
+CONFIG_PVR_SGXCORE_540=y
+# CONFIG_PVR_SGXCORE_544 is not set
+CONFIG_PVR_BUILD_RELEASE=y
+# CONFIG_PVR_BUILD_DEBUG is not set
+# CONFIG_PVR_NEED_PVR_DPF is not set
+# CONFIG_PVR_NEED_PVR_ASSERT is not set
+CONFIG_PVR_PERCONTEXT_PB=y
+CONFIG_PVR_ACTIVE_POWER_MANAGEMENT=y
+CONFIG_PVR_ACTIVE_POWER_LATENCY_MS=100
+CONFIG_PVR_SGX_LOW_LATENCY_SCHEDULING=y
+CONFIG_PVR_USSE_EDM_STATUS_DEBUG=y
+# CONFIG_PVR_DUMP_MK_TRACE is not set
+# CONFIG_PVR_PDUMP is not set
+CONFIG_PVR_OMAP_DSS2=y
+# CONFIG_SGX_DVFS_MODE_NONE is not set
+# CONFIG_SGX_DVFS_MODE_LINEAR is not set
+CONFIG_SGX_DVFS_MODE_OPTIMIZED=y
+CONFIG_SGX_DVFS_IDLE_TIMEOUT=1000
+CONFIG_PVR_LINUX_MEM_AREA_POOL=y
+CONFIG_PVR_LINUX_MEM_AREA_POOL_MAX_PAGES=10800
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_FB=y
