--- a/arch/arm/configs/dhollmen_P51XX_defconfig
+++ b/arch/arm/configs/dhollmen_P51XX_defconfig
@@ -456,7 +456,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_LULZACTIVE is not set
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 # CONFIG_CPU_FREQ_GOV_LULZACTIVEQ is not set
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
 # CONFIG_CPU_FREQ_GOV_HOTPLUG is not set
